# projwarp

./: Cargo.toml  Dockerfile  LICENSE  README.md  install.ps1  projwarp.0.1.0.nupkg  projwarp.nuspec  quick-install.ps1
.github/workflows/: release.yml
src/: actions.rs  cli.rs  config.rs  fuzzy.rs  installer.rs  main.rs
tools/: chocolateyinstall.ps1  chocolateyuninstall.ps1
