[package]
name = "projwarp"
version = "0.1.0"
edition = "2024"
authors = ["リッキー <ricky-ultimate.dev@gmail.com>"]
description = "Jump to your projects instantly with fuzzy matching"
readme = "README.md"
homepage = "https://github.com/ricky-ultimate/projwarp"
repository = "https://github.com/ricky-ultimate/projwarp"
license = "MIT"
keywords = ["cli", "productivity", "navigation", "project", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
colored = "2"
fuzzy-matcher = "0.3"
anyhow = "1"

[[bin]]
name = "projwarp"
path = "src/main.rs"
